# NeuroSymbolic-meta-reasoning-agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  deploy_to_hf.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/workflows/: deploy.yml
kaggle/: kernel-metadata.json  run_agent.py
neurosymbolic_agent/: README.md  __init__.py  cli.py  main.py  requirements.txt
neurosymbolic_agent/agent/: __init__.py  meta_controller.py  reasoning_engine.py  self_improvement.py
neurosymbolic_agent/configs/: agent_config.yaml  constitutional_principles.yaml
neurosymbolic_agent/constitutional/: __init__.py  checker.py  principles.py  reward_hacking_detector.py
neurosymbolic_agent/llm/: __init__.py  local_llm_manager.py
neurosymbolic_agent/memory/: __init__.py  episodic_memory.py  memory_manager.py  vector_memory.py  working_memory.py
neurosymbolic_agent/neural/: __init__.py  classifier.py  embedder.py  inference.py
neurosymbolic_agent/planning/: __init__.py  fallback_strategies.py  hierarchical_planner.py
neurosymbolic_agent/symbolic/: __init__.py  constraint_engine.py  knowledge_base.py  solver.py
neurosymbolic_agent/tests/: conftest.py  test_constitutional.py  test_integration.py  test_memory.py  test_meta_controller.py  test_self_improvement.py  test_symbolic_solver.py
neurosymbolic_agent/utils/: __init__.py  config.py  logging_utils.py  telemetry.py  trace_recorder.py
scripts/: publish_kaggle.py
